// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Documentation: Panel Overview renders 1`] = `
<Fragment>
  <h2
    id="overview"
  >
    Overview
  </h2>
  <p>
    Panel...
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Panel
      bodyContent={
        Array [
          "Your main panel content is put here.",
          "Some more content over here.",
          "And one more line, just to be safe.",
        ]
      }
      footerBtnText="Footer button"
      footerText="Footer content goes here."
      subTitle="Panel subtitle"
      title="Panel title"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Panel PanelDark renders 1`] = `
<Fragment>
  <h2
    id="panel-dark-mode"
  >
    Panel dark mode
  </h2>
  <p>
    Dark body with 
    <Property
      value=".panel-dark"
    />
    ...
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Panel
      bodyContent={
        Array [
          "Your main panel content is put here.",
          "Some more content over here.",
          "And one more line, just to be safe.",
        ]
      }
      darkMode={true}
      footerBtnText="Footer button"
      footerText="Footer content goes here."
      subTitle="Panel subtitle"
      title="Panel title"
      type="brand"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Panel PanelHeaders renders 1`] = `
<Fragment>
  <h2
    id="panel-headers"
  >
    Panel headers
  </h2>
  <p>
    Two types of headers... 
    <Property
      value=".panel-default"
    />
     and 
    <Property
      value=".panel-brand"
    />
    ...
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Panel
      title="Default panel"
    />
    


    <Panel
      title="Panel brand"
      type="brand"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Panel PanelMuted renders 1`] = `
<Fragment>
  <h2
    id="muted-panel"
  >
    Muted panel
  </h2>
  <p>
    Muted panel with 
    <Property
      value=".panel-muted"
    />
    ...
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Panel
      bodyContent={
        Array [
          "Your main panel content is put here.",
          "Some more content over here.",
          "And one more line, just to be safe.",
        ]
      }
      footerBtnText="Footer button"
      footerText="Footer content goes here."
      subTitle="Panel subtitle"
      title="Panel title"
      type="muted"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Panel PanelText renders 1`] = `
<div
  className="col-lg-10 doc-body"
>
  <p
    className="lead"
  >
    Panels...
  </p>
  <Overview />
  <PanelHeaders />
  <PanelDark />
  <PanelMuted />
  <PanelTable />
</div>
`;

exports[`Documentation: Panel renders 1`] = `
<div
  className="doc-container"
>
  <div
    className="row"
  >
    <PanelText />
    <DocToc
      component={[Function]}
    />
  </div>
</div>
`;
